[package]
name = "iroh-vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
injector = { git = "https://github.com/Le-Maz/injector", version = "0.1" }
injector-macro = { git = "https://github.com/Le-Maz/injector", version = "0.1" }
iroh = "0.33"
serde = "1"
serde_json = "1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync", "time"] }
tun = { version = "0.7.13", features = ["async"] }
