[package]
name = "iroh-vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.35", features = ["derive"] }
injector = { git = "https://github.com/Le-Maz/injector", version = "0.5" }
iroh = "0.34"
serde = "1"
serde_json = "1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tun = { version = "0.7.13", features = ["async"] }
